# rover_autonomy

./: .gitignore  README.md
src/serial_interface/: CMakeLists.txt  package.xml
src/serial_interface/core/: SerialInterface.cpp
src/serial_interface/include/serial_interface/: SerialDefs.hpp  SerialInterface.hpp  serial_defs.hpp  serial_interface.hpp
src/serial_interface/launch/: serial_interface.launch.py
src/serial_interface/scratch/: test.cpp
src/serial_interface/src/: serial_interface.cpp  test_node.cpp
src/um982_driver/: CMakeLists.txt  package.xml
src/um982_driver/core/: UnicoreDriver.cpp  UnicoreParsers.cpp
src/um982_driver/include/um982_driver/core/: UnicoreDriver.hpp  UnicoreMsgs.hpp  UnicoreParsers.hpp
src/um982_driver/include/um982_driver/ros2/: um982_driver_ros2.hpp
src/um982_driver/jupyter/: Untitled.ipynb
src/um982_ros_driver/: CMakeLists.txt  package.xml
src/um982_ros_driver/include/um982_ros_driver/: um982_observers.hpp  um982_ros_driver.hpp  unicore_log_messages.hpp  unicore_parsers.hpp
src/um982_ros_driver/launch/: record_data.launch.py  um982_driver.launch.py
src/um982_ros_driver/src/: um982_ros_driver.cpp  unicore_parsers.cpp
src/unicore_msgs/: CMakeLists.txt  package.xml
src/unicore_msgs/msg/: AGRICShort.msg  AgricShort.msg  PVTSLNShort.msg  PvtslnShort.msg  RTKStatusShort.msg  UNIHEADINGShort.msg  UniheadingShort.msg
src/utils/: CMakeLists.txt  package.xml
src/utils/include/utils/: PooledQueue.hpp
src/utils/old/: BufferPool.hpp  ThreadSafeQueue.hpp
src/utils/scratch/: test.cpp
