<?xml version="1.0"?>
<package format="3">
    <name>serial_interface</name>
    <version>0.0.1</version>
    <description>ROS 2 wrapper for a modular serial interface</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <build_depend>builtin_interfaces</build_depend>
    <exec_depend>builtin_interfaces</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>rclcpp_components</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
